<resources>
    <string name="app_name">Kalkulator</string>
    <string name="eq">=</string>
    <string name="kropka">.</string>
    <string name="_0">0</string>
    <string name="plus">+</string>
    <string name="_3">3</string>
    <string name="_2">2</string>
    <string name="_1">1</string>
    <string name="minus">-</string>
    <string name="_6">6</string>
    <string name="_5">5</string>
    <string name="_4">4</string>
    <string name="iloczyn">*</string>
    <string name="_9">9</string>
    <string name="_8">8</string>
    <string name="_7">7</string>
    <string name="procent">%</string>
    <string name="div">/</string>
    <string name="znak">+-</string>
    <string name="del">DEL</string>
    <string name="m">M+</string>
    <string name="mr">MR</string>
    <string name="mc">MC</string>
    <string name="c">C</string>
</resources>
